# rust-blog-series-conspiracies-api

./: .gitignore  Cargo.toml  README.md  create_insert_statements.sh  link_titles.txt  links_to_process.sql
migrations/2018-05-01-002930_create_conspiracies/: down.sql  up.sql
migrations/2018-05-04-013052_create_links_processed_table_and_data/: up.sql
migrations/2018-05-04-182130_create_categoes_to_page_table/: down.sql  up.sql
migrations/2018-05-09-134354_create_categories_table/: up.sql
migrations/2018-05-09-152831_update_categories_to_pages_to_use_real_categories/: up.sql
migrations/2018-05-09-155321_clean_category_names_add_category_id_to_categories_to_pages/: up.sql
migrations/2018-05-09-162601_add_page_title_column_to_categories_to_pages_and_populate_it/: up.sql
migrations/2018-05-19-130802_add_tag_table/: down.sql  up.sql
migrations/2018-06-03-231704_add-conspiracy-tags-table/: down.sql  up.sql
src/: .env  actors.rs  db.rs  lib.rs  main.rs  models.rs  schema.rs  wiki.rs
src/actors/: conspiracies.rs  db_executor.rs  get_conspiracy.rs  mod.rs  tags.rs
src/conspiracies_api/: main.rs
src/db_loader/: main.rs
wikipedia-data/: list-conspiracy-theories.json
