[package]
name = "conspiracies"
version = "0.0.1"
authors = ["Rob Rowe <rrowe@foodlogiq.com>"]

[[bin]]
name = "db_loader"
path = "src/db_loader/main.rs" 

[[bin]]
name = "conspiracies_api"
path = "src/conspiracies_api/main.rs" 

[dependencies]
clap = "2.31.2"
wikipedia = "0.3.1"
diesel = { version = "1.0.0", features = ["sqlite", "r2d2"] }
r2d2 = "0.8"
dotenv = "0.9.0"
rand = "0.5.0-pre.1"
chrono = "0.4.2"
actix-web = "0.6.2"
actix = "0.5.6"