[package]
name = "conspiracies"
version = "0.0.4"
authors = ["Rob Rowe <rrowe@foodlogiq.com>"]

[[bin]]
name = "db_loader"
path = "src/db_loader/main.rs" 

[[bin]]
name = "conspiracies_api"
path = "src/conspiracies_api/main.rs" 

[[bin]]
name = "tui_admin"
path = "src/tui_admin/main.rs" 

[dependencies]
actix = "0.5.6"
actix-web = "0.6.10"
chrono = "0.4.2"
clap = "2.31.2"
cursive = "0.8"
diesel = { version = "1.0.0", features = ["sqlite"] }
dotenv = "0.9.0"
rand = "0.5.0-pre.1"
env_logger = "0.5.10"
futures = "0.1"
hyper = "0.11"
log = "0.4.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
tokio-core = "0.1"
wikipedia = "0.3.1"
